@@ -20,6 +20,8 @@ Version 0.9
 
 - Added Gettext catalog lexer.
 
+- Greatly improved the Haskell lexer.
+
 - Fixed bugs in the D and MiniD lexer.
 
 
